minecraft/smp5/bluemap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smp5-bluemap
spec:
  ports:
    - port: 8100
      name: blue
  selector:
    app: smp5
