minecraft/smp5/bluemap-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: smp5-bluemap
  namespace: smp5
spec:
  rules:
    - host: smp.771.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smp5-bluemap
                port:
                  number: 8100
    - host: smp.jemand771.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smp5-bluemap
                port:
                  number: 8100
