minecraft/smp5/plan-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: smp5-plan
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  rules:
    - host: plan.771.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smp5-plan
                port:
                  number: 8804
